# cubby

./: .cursorignore  .cursorrules  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  check_screenpipe_db.sh  input.css  install.ps1  install.sh  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  speech-analyzer-plan.md  test_service_manager.sh  turbo.json
.cargo/: config.toml
.cursor/: ndjson-ingest.json
.cursor/rules/: cubby.mdc
.devcontainer/: devcontainer.json
.devcontainer/scripts/: linux_integration.sh  postCreateCommand.sh  welcome-message.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/scripts/: check_logs.sh  generate_changelog_md.sh  run_screenpipe.sh  stop_screenpipe.sh  test_audio_capture.sh  test_ocr.sh
.github/workflows/: benchmark.yml  build-core-pipes.yml  ci-checks.yml  ci.yml  deploy-production.yml  e2e-test.yml  linux-integration-test.yml  publish-prebuilt.yml  release-cli.yml  style.yml
apps/cubby/: Cargo.toml  README.md
apps/cubby-api/: Cargo.toml
apps/cubby-cli/: Cargo.toml  README.md  build.rs  cli_guidelines_llms.txt
apps/cubby-cli/src/: bootstrap.rs  counter.rs  cubby_client.rs  main.rs  service_manager.rs
apps/cubby-installer/: README.md  package.json  wrangler.jsonc
apps/cubby-mcp-server/: .dev.vars.example  package.json  worker-configuration.d.ts  wrangler.jsonc
apps/cubby-server/: README.md  drizzle.config.ts  package.json  worker-configuration.d.ts  wrangler.jsonc
apps/cubby/src/: cloudflared_handler.rs  config.rs  cubby_api_client.rs  cubby_relay_client.rs  deps_manager.rs  embedded_assets.rs  main.rs  screenpipe_handler.rs  signals.rs
apps/exampleCoWebsite/: package.json  tsconfig.json  wrangler.toml
apps/exampleco_website/: README.md  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
apps/get-cubby/: README.md  package.json  tsconfig.json  wrangler.jsonc
assets/static/: output.css
assets/views/: base.html
ax_tree/: Cargo.toml
ax_tree/src/: app.rs  lib.rs  main.rs  observer.rs
ax_tree/src/tree/: ax_element.rs  mod.rs  recorder.rs
config/: development.yaml  test.yaml
content/docs-mintlify-mig-tmp/: architecture.mdx  cli-reference.mdx  contributing.mdx  docs.json  faq.mdx  getting-started.mdx  home.mdx  mcp-server.mdx  openapi.yaml  plugins.mdx  sdk-reference.mdx
cubby-api/: .dev.vars.example  .gitignore  README.md  package.json  set-production-secrets.sh  tsconfig.json  worker-configuration.d.ts  wrangler.toml
cubby-api/drizzle/: 0000_smooth_oracle.sql
cubby-api/src/: errors.ts  gateway_openapi.ts  helpers.ts  index.ts  proxy_config.ts
cubby-audio/: Cargo.toml  build.rs
cubby-audio/examples/: apple-intelligence-mic.rs  screenpipe-audio.rs
cubby-audio/src/: lib.rs
cubby-audio/swift/: Package.resolved
cubby-audio/tests/: accuracy_test.rs  apple_intelligence_live_microphone.rs  apple_intelligence_streaming.rs  core_tests.rs  realtime_test.rs  speaker_identification.rs
cubby-bruno/: bruno.json  test request.bru
cubby-bruno/environments/: local.bru  local.json
cubby-bruno/requests/: 0-simple-test.bru  1-oauth-authorize-get.bru  4-call-api-with-token.bru
cubby-core/: Cargo.toml
cubby-core/examples/: google.rs  llama.rs  mistral.rs  phi.rs  win_automation.rs  windows_pdf_to_legacy.rs
cubby-core/src/: actions.rs  pipes.rs
cubby-core/tests/: pipes_test.rs
cubby-db/: Cargo.toml
cubby-db/benches/: db_benchmarks.rs  new_db_benchmark.rs
cubby-db/src/: db.rs  types.rs
cubby-db/tests/: db.rs
cubby-events/: Cargo.toml
cubby-events/benches/: events.rs
cubby-foundationmodels/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLE.md  README.md  build.rs
cubby-foundationmodels/examples/: check_availability.rs  check_version.rs  install_assets.rs  preheat.rs  stream_file.rs  stream_microphone.rs  transcribe_file.rs
cubby-foundationmodels/src/: lib.rs  main.rs  schema.rs  speech.rs  streaming.rs  version.rs
cubby-foundationmodels/swift/: Package.swift
cubby-foundationmodels/swift/Sources/FoundationModelsBridge/: FoundationModelsBridge.swift  SpeechBridge.swift  bridging-header.h
cubby-foundationmodels/tests/: generic_schema_test.rs  integration_test.rs  speech_file_test.rs  speech_helpers_test.rs  streaming_realtime_test.rs  streaming_test.rs
cubby-frontend/: .gitignore  README.md  package.json  wrangler.toml
cubby-installer/: package.json  wrangler.jsonc
cubby-integrations/: Cargo.toml
cubby-integrations/cubby-mcp/: README.md  pyproject.toml
cubby-js/: README.md  package.json  tsconfig.json
cubby-playground/: Cargo.toml  ocr_json_viewer.html
cubby-playground/examples/: ax_snapshot.rs  ax_snapshot_objc2.rs  daily_live_summary.rs  foundation_models_concurrency.rs  foundation_models_serial_capacity.rs  hello.rs  list_languages.rs  prompt_optimizer.rs
cubby-playground/src/: lib.rs
cubby-playground/src/ax_tree/: mod.rs  recorder.rs
cubby-server/: Cargo.toml  README.md  build.rs
cubby-server/examples/timeline_ui_simple/: index.html
cubby-server/sidecars/macos-aarch64/: notify-helper
cubby-server/sidecars/macos-x86_64/: notify-helper
cubby-server/src/: add.rs  apple_summary.rs  auto_destruct.rs  cli.rs  cloudflared_downloader.rs  cloudflared_manager.rs  core.rs  cubby_api_client.rs  fusion_mode.rs  lib.rs  live_summary.rs  mac_notifications.rs  onboarding.rs  permission_checker.rs  pipe_manager.rs  playground.rs  server.rs  service_manager.rs  setup_state.rs  video.rs  video_cache.rs  video_utils.rs
cubby-server/src/embedding/: embedding_endpoint.rs
cubby-server/src/mcp/: server.rs
cubby-server/src/tui/: app.rs  ui.rs
cubby-server/tests/: audio_vision_integration_test.rs  chunking_test.rs  endpoint_test.rs  index_test.rs  tags_test.rs  video_cache_test.rs  video_utils_test.rs
cubby-vision/: Cargo.toml
exampleco-website/: .gitignore  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
examples/: README.md  playground.rs
notify-helper/: Cargo.toml
src/: app.rs
tests/: auth.rs  stytch_mock_server.rs
(+341 files in other folders)
