[workspace]
members = [
    "cubby-core",
    "cubby-vision",
    "cubby-audio",
    "cubby-server",
    "cubby-events",
    "cubby-db",
    "notify-helper",
    "cubby-playground", "ax_tree",
]
resolver = "2"

[workspace.package]
version = "0.2.75"
authors = ["monadoid <monadoid@tabsandtabs.mozmail.com>"]
description = ""
repository = "https://github.com/monadoid/cubby"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
# Align all crates on a single cidre implementation to avoid duplicate Objective-C symbols
cidre = { git = "https://github.com/mediar-ai/cidre.git", rev = "5ec1e32f72bee75bfb33d1e73610c3c22d97733b" }
cidre-macros = { git = "https://github.com/mediar-ai/cidre.git", rev = "5ec1e32f72bee75bfb33d1e73610c3c22d97733b", package = "cidre-macros" }
# AI
# candle = { version = "0.8.3", package = "candle-core" }
# candle-nn = { version = "0.8.3", package = "candle-nn" }
# candle-transformers = { version = "0.8.3", package = "candle-transformers" }

candle = { git = "https://github.com/huggingface/candle.git", rev = "c930ab7e1a234f02a0f49350bf38f03f45e53757", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "c930ab7e1a234f02a0f49350bf38f03f45e53757", package = "candle-nn" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", rev = "c930ab7e1a234f02a0f49350bf38f03f45e53757", package = "candle-transformers" }

tokenizers = "0.21.0"
hf-hub = { version = "0.3.2", git = "https://github.com/neo773/hf-hub", features = [
    "native-tls",
] }
log = "0.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
tracing-appender = { version = "0.2.3" }
tokio = { version = "1.15", features = ["full", "tracing"] }
crossbeam = "0.8.4"
dashmap = "6.1.0"
image = "0.25"
criterion = { version = "0.5.1", features = ["async_tokio"] }
oasgen = { version = "0.22.0", features = ["axum", "chrono"] }
once_cell = "1.20.2"
sentry = { version = "0.36.0", features = ["tracing"] }

http-cache-reqwest = "0.15.0"
reqwest = { version = "=0.12.12", features = ["blocking", "multipart", "json", "native-tls-vendored"] }
reqwest-middleware = "0.4.1"


[patch.crates-io]
# enables chinese mirror (hf is banned in china) and native-tls
hf-hub = { git = "https://github.com/neo773/hf-hub", features = ["native-tls"] }
# Patch half to use a version compatible with both candle and ort
half = { git = "https://github.com/starkat99/half-rs.git", tag = "v2.5.0" }

[workspace.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "2023.04.15"
dynamic = true

[profile.profiling]
inherits = "release"
debug = true

[patch."https://github.com/yury/cidre.git"]
cidre = { git = "https://github.com/mediar-ai/cidre.git", rev = "5ec1e32f72bee75bfb33d1e73610c3c22d97733b" }
cidre-macros = { git = "https://github.com/mediar-ai/cidre.git", rev = "5ec1e32f72bee75bfb33d1e73610c3c22d97733b", package = "cidre-macros" }
