[package]
name = "cubby-foundationmodels"
version.workspace = true
authors.workspace = true
description = "Apple FoundationModels SDK bridge for Cubby - structured text generation with streaming support"
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "cubby_foundationmodels"
path = "src/lib.rs"

[[bin]]
name = "cubby-foundationmodels"
path = "src/main.rs"

[dependencies]
swift-bridge = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

[build-dependencies]
swift-bridge-build = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hound = "3"
