[package]
name = "cubby-playground"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
cubby-audio = { path = "../cubby-audio" }
cubby-server = { path = "../cubby-server" }
async-openai = { path = "../../async-openai/async-openai", default-features = false, features = ["native-tls-vendored"] }
schemars = { version = "0.8", features = ["derive"] }
reqwest = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["chrono", "runtime-tokio-native-tls", "sqlite"] }
tiktoken-rs = "0.5"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
toml = "0.9.8"
uuid = { version = "1", features = ["serde", "v4"] }
futures = "0.3"
