[package]
name = "cubby"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.47", features = ["derive"] }
reqwest = { version = "0.12" }
rust-embed = "8.7.2"
serial_test = "3.2.0"
service-manager = "0.8.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
reqwest = { version = "0.12", features = ["json"] }
