[package]
name = "cubby"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.47", features = ["derive"] }
cliclack = "0.3.6"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
rust-embed = "8.7.2"
serial_test = "3.2.0"
service-manager = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }
confy = "1.0.0"
nanoid = "0.4.0"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
reqwest = { version = "0.12", features = ["json"] }
