[package]
name = "cubby"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
cliclack = "0.3.6"
duct = "1.1.0"
anyhow = "1.0.100"
rust-embed = "8.7.2"
directories = "6.0.0"
ctrlc = "3.5.0"
service-manager = "0.8.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
nanoid = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
