[package]
name = "cubby"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
cliclack = "0.3.6"
duct = "1.1.0"
anyhow = "1.0.100"
directories = "6.0.0"
service-manager = "0.8.0"
reqwest = { version = "0.12.23", features = ["blocking", "json", "rustls-tls"], default-features = false }
nanoid = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
flate2 = "1.1.2"
tar = "0.4.44"
zip = "5.1.1"
hex = "0.4.3"
